--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ body{
 .glovalNavigation{
     height: 70px;
     background-color: #888;
-    /* margin: 10px 0 10px 0; */
+    margin: 15px 0 10px 0; /* margin: 10px 0 10px 0; */
     color: #fff;
 	list-style-type: none; /* リスト先頭の黒丸を非表示 */
 	text-align: center; /* .header-list ul {}内ではなくこちらに書いたら中央揃えが適用された。(liの親box?)*/
