--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,12 +93,21 @@ padding: 10px;
 
 .item1{
   background-color: #eee;
+	width: 550px;
+	width: 40%;	
+        padding-top: 40%;
 }
 .item2{
   background-color: #eee;
+	width: 550px;
+	width: 40%;	
+        padding-top: 40%;
 }
 .item3{
   background-color: #eee;
+	width: 550px;
+	width: 40%;	
+        padding-top: 40%;
 }
 /* ##################### */
 
