--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,20 +88,24 @@ padding: 10px;
  item {
  /* display: flex; */
  /* padding: 0px; */
-  width: 550px;
+  width: 100%;
+  padding: 10px;
   }
 
 .item1{
   background-color: #eee;
-	width: 550px;
+	width: 100%;
+	  padding: 10px;
 }
 .item2{
   background-color: #eee;
-	width: 550px;
+	width: 100%;
+	  padding: 10px;
 }
 .item3{
   background-color: #eee;
-	width: 550px;
+	width: 100%;
+	  padding: 10px;
 }
 /* ##################### */
 
