--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,11 +68,11 @@ main{
 .localNavigation{
    display:flex; /* */
    flex-direction: column;	/* */
-    
+    align-items: right; /* */
     text-align: center;
-    background-color: #888;
+ /*   background-color: #888; */
     color: #fff;
-    width: 550px; /* 550px */ 
+   /* width: 550px; /* 550px */ */ 
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
@@ -82,7 +82,22 @@ main{
 }
 
 /* ##################### */
-
+.image{
+  width:550px;
+  background-color: #888;
+}
+.image1{
+  width: 60%;
+  padding-top: 60%;
+}
+.image2{
+  width: 40%;
+  padding-top: 40%;
+}
+.image3{
+  width: 40%;
+  padding-top: 40%;
+}
 /* ##################### */
 
 .footer{
