--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,11 +68,10 @@ main{
 .localNavigation{
    display:flex; /* */
    flex-direction: column;	/* */
-    align-items: right; /* */
     text-align: center;
  /*   background-color: #888; */
     color: #fff;
-   /* width: 550px; /* 550px */ */ 
+    width: 550px; /* 550px */  
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
