--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,7 +69,7 @@ main{
    display:flex; /* */
    flex-direction: column;	/* */
     text-align: center;
- /*   background-color: #888; */
+   background-color: #888;
     color: #fff;
     width: 550px; /* 550px */  
     margin-right: 30px;           /* */
