--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,7 +70,7 @@ main{
    flex-direction: column;	/* */
     text-align: center;
    background-color: #888;
-    color: #fff;
+   /* color: #fff; */
     width: 550px; /* 550px */  
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
