--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,8 +66,7 @@ main{
 }
 
 .localNavigation{
-   display:flex; /* */
-   flex-direction: column;	/* */
+   display: grid;	
     text-align: center;
    background-color: #888;
    /* color: #fff; */
@@ -77,25 +76,24 @@ main{
     margin-bottom: 20px;             /* */
 	
 	 width: 40%;  /* */	
-         padding-top: 40%;  /* */	
+         padding-top: 40%;  /* */
+	
+  grid-template-rows: 2fr 1fr 1fr;
+  gap: 10px 30px;
 }
 
 /* ##################### */
-.image{
-  width:550px;
-  background-color: #888;
-}
 .image1{
-  width: 60%;
-  padding-top: 60%;
+  　　grid-row: 1/3;
+　　grid-column: 1/2;
 }
 .image2{
-  width: 40%;
-  padding-top: 40%;
+  　　grid-row: 3/4;
+　　grid-column: 1/2;
 }
 .image3{
-  width: 40%;
-  padding-top: 40%;
+  　　grid-row: 4/5;
+　　grid-column: 1/2;
 }
 /* ##################### */
 
