--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,34 +66,42 @@ main{
 }
 
 .localNavigation{
-   display: grid;	
+   display:flex; /* */
+  /*  flex-flow: column; */ /* */
+    
     text-align: center;
-   background-color: #888;
-   /* color: #fff; */
-    width: 550px; /* 550px */  
+    background-color: #888;
+    color: #fff;
+    width: 550px; /* 550px */ 
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
 	
 	 width: 40%;  /* */	
-         padding-top: 40%;  /* */
-	
-  grid-template-rows: 2fr 1fr 1fr;
-  gap: 10px 30px;
+         padding-top: 40%;  /* */	
+
+flex-direction: column;	/* */
+padding: 10px;
 }
 
 /* ##################### */
-.image1{
-  　　grid-row: 1/3;
-　　grid-column: 1/2;
+ item {
+ /* display: flex; */
+ /* padding: 0px; */
+  width: 100%;
+  }
+
+.item1{
+  background-color: #eee;
+	width: 100%;
 }
-.image2{
-  　　grid-row: 3/4;
-　　grid-column: 1/2;
+.item2{
+  background-color: #eee;
+	width: 100%;
 }
-.image3{
-  　　grid-row: 4/5;
-　　grid-column: 1/2;
+.item3{
+  background-color: #eee;
+	width: 100%;
 }
 /* ##################### */
 
