--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ body{
 .glovalNavigation{
     height: 70px;
     background-color: #888;
-    margin: 15px 0 10px 0; /* margin: 10px 0 10px 0; */
+    margin: 10px 0 10px 0; /* margin: 15px 0 10px 0 | margin: 10px 0 10px 0; */
     color: #fff;
 	list-style-type: none; /* リスト先頭の黒丸を非表示 */
 	text-align: center; /* .header-list ul {}内ではなくこちらに書いたら中央揃えが適用された。(liの親box?)*/
@@ -34,7 +34,7 @@ body{
 	/* text-align: center;  listの中央揃えでは、ul{}内にtext-align: center;を書く */
 /* } */
 .header-list li {
-	font-size: 17px; /* 15px 18px 4vh */
+	font-size: 16px; /* 17px 15px 18px 4vh */
 	display: inline; /* リスト要素を縦から横並びに変換する */
         padding: 35px 40px 20px 20px; 余白: [上][右][下][左] /*  padding: 35px 40px  padding: 35px 40px 20px 20px; */
 }
