--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,10 +42,10 @@ body{
 main{
     display: flex;
 	
-/* min-height: 70vh; /* 60vh */　*/　
-/* max-height: 100vh; /* 80vh */　*/　
+/* min-height: 70vh; */ /* 60vh */　
+/* max-height: 100vh; */ /* 80vh */　
 	max-width: 1000px;
-	max-height: 800px;  /*　*/
+	max-height: 1000px;  /*　800px */
 
    margin: 10px 0 10px 0;
 
