--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,56 +37,41 @@ body{
 }
 
 main{
-    display: flex;
+    display: grid;
+    grid-template-columns: 7fr 4fr;
+    grid-template-rows: 5fr;
 	
 /* min-height: 70vh; */ /* 60vh */　
 /* max-height: 100vh; */ /* 80vh */　
-	max-width: 1000px;
-	max-height: 1000px;  /*　800px */
+	/* max-width: 1000px; */
+/* max-height: 800px;  */
 
    margin: 10px 0 10px 0;
 
 }
 
-.content{	
-    /* flex: 1; */
-    display: flex; /* */
-    background-color: #eee;
-    text-align: center;
-    margin-right: 10px;
-    margin-left: 30px;             /* */
-    margin-top: 20px;             /* */
-    margin-bottom: 20px;             /* */
-  width: 850px; /* 850px */ 
-	
-   width: 60%;  /* */	
-   padding-top: 40%;  /* */
-}
-
-.localNavigation{
-    text-align: center;
-    background-color: #888;
-    color: #fff;
-    width: 550px; /* 550px */ 
-    margin-right: 30px;           /* */
-    margin-top: 20px;             /* */
-    margin-bottom: 20px;             /* */
-
-	 width: 40%;  /* */	
-         padding-top: 40%;  /* */		   
-}
-
-/* ##################### */
- item {
-  }
-
 .item1{
+    grid-column-start: 1;
+    grid-column-end: 7;
 }
 .item2{
+    grid-column-start: 7;
+    grid-column-end: 11;
+    grid-row-start: 1;
+    grid-row-end: 3;    
 }
 .item3{
+    grid-column-start: 7;
+    grid-column-end: 11;
+    grid-row-start: 3;
+    grid-row-end: 4;    
 }
-/* ##################### */
+.item4{
+    grid-column-start: 7;
+    grid-column-end: 11;
+    grid-row-start: 4;
+    grid-row-end: 5;    
+}
 
 .footer{
     height: 170px; /* 165px 70px 140px */
