--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,30 +43,34 @@ main{
 	
 /* min-height: 70vh; */ /* 60vh */　
 /* max-height: 100vh; */ /* 80vh */　
-	/* max-width: 1000px; */
-/* max-height: 800px;  */
+	 max-width: 1000px; 
+ max-height: 800px;  
 
    margin: 10px 0 10px 0;
 
 }
 
 .item1{
+	background-color: #eee;
     grid-column-start: 1;
     grid-column-end: 7;
 }
 .item2{
+	background-color: #888;
     grid-column-start: 7;
     grid-column-end: 11;
     grid-row-start: 1;
     grid-row-end: 3;    
 }
 .item3{
+background-color: #888;
     grid-column-start: 7;
     grid-column-end: 11;
     grid-row-start: 3;
     grid-row-end: 4;    
 }
 .item4{
+	background-color: #888;
     grid-column-start: 7;
     grid-column-end: 11;
     grid-row-start: 4;
