--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,20 +39,20 @@ body{
 main{
 /* min-height: 70vh; */ /* 60vh */　
 /* max-height: 100vh; */ /* 80vh */　
-	 max-width: 1000px; 
+ max-width: 1000px; 
  max-height: 800px;  
 
-   margin: 10px 0 10px 0;
+  /*  margin: 10px 0 10px 0; */　
 }
 
 .contents{
     display: grid;
-    grid-template-columns: 7fr 4fr;
-    grid-template-rows: 5fr;
+    grid-template-columns: 700px 400px;
+    grid-template-rows: 500px;
 }
 
 .item_1{
-	background-color: #eee;
+    background-color: #eee;
     grid-column-start: 1;
     grid-column-end: 7;
 }
