--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,37 +45,31 @@ main{
   /*  margin: 10px 0 10px 0; */　
 }
 
-.contents{
+#contents{
     display: grid;
-    grid-template-columns: 700px 400px;
-    grid-template-rows: 500px;
+    grid-template-rows: 550px 125px 125px;
+    grid-template-columns: 700px 1fr;
 }
 
-.item_1{
+#item_1{
+    grid-row: 1 / 4;
+    grid-column: 1 / 2;
     background-color: #eee;
-    grid-column-start: 1;
-    grid-column-end: 7;
 }
-.item_2{
-	background-color: #888;
-    grid-column-start: 7;
-    grid-column-end: 11;
-    grid-row-start: 1;
-    grid-row-end: 3;    
+#item_2 {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    background: #888;
 }
-.item_3{
-background-color: #888;
-    grid-column-start: 7;
-    grid-column-end: 11;
-    grid-row-start: 3;
-    grid-row-end: 4;    
+#item_3 {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    background: #888;
 }
-.item_4{
-	background-color: #888;
-    grid-column-start: 7;
-    grid-column-end: 11;
-    grid-row-start: 4;
-    grid-row-end: 5;    
+#item_4 {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+    background: #888;
 }
 
 .footer{
