--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,8 +39,8 @@ body{
 main{
 /* min-height: 70vh; */ /* 60vh */　
 /* max-height: 100vh; */ /* 80vh */　
- max-width: 1000px; 
- max-height: 800px;  
+/*  max-width: 1000px; */　
+/*  max-height: 800px;  */
 
   /*  margin: 10px 0 10px 0; */　
 }
