--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,7 +42,10 @@ main{
 /*  max-width: 1000px; */　
 /*  max-height: 800px;  */
 
-  /*  margin: 10px 0 10px 0; */　
+	width: 1000px;
+	height: 800px;
+	
+   margin: 10px 0 10px 0;　
 }
 
 #contents{
