--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,34 +42,33 @@ main{
 /*  max-width: 1000px; */　
 /*  max-height: 800px;  */
 
-	width: 1000px;
 	height: 800px;
-	
+	width: 1000px;	
    margin: 10px 0 10px 0;　
 }
 
-#contents{
+.contents{
     display: grid;
     grid-template-rows: 550px 125px 125px;
     grid-template-columns: 700px 1fr;
 }
 
-#item_1{
+.item_1{
     grid-row: 1 / 4;
     grid-column: 1 / 2;
     background-color: #eee;
 }
-#item_2 {
+.item_2 {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     background: #888;
 }
-#item_3 {
+.item_3 {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
     background: #888;
 }
-#item_4 {
+.item_4 {
     grid-row: 3 / 4;
     grid-column: 2 / 3;
     background: #888;
