--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,8 +42,8 @@ main{
 /*  max-width: 1000px; */　
 /*  max-height: 800px;  */
 
-	height: 800px;
-	width: 1000px;	
+	/* height: 800px; */　
+	/* width: 1000px; */	
    margin: 10px 0 10px 0;　
 }
 
