--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,29 +47,29 @@ main{
    margin: 10px 0 10px 0;　
 }
 
-.contents{
+#container{
     display: grid;
     grid-template-rows: 550px 125px 125px; /* grid-template-rows: 550px 125px 125px; */
     grid-template-columns: 700px 1fr; /* grid-template-columns: 700px 1fr; */
-    gap: 10px 10px;
+    /* gap: 10px 10px; */
 }
 
-.item_1{
+#itemA{
     grid-row: 1 / 4;
     grid-column: 1 / 2;
     background-color: #eee;
 }
-.item_2 {
+#itemB {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     background: #888;
 }
-.item_3 {
+#itemC {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
     background: #888;
 }
-.item_4 {
+#itemD {
     grid-row: 3 / 4;
     grid-column: 2 / 3;
     background: #888;
