--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,8 +3,8 @@
 	position: static;
 }
 body{
-  /*  display: flex; */
-  /*  flex-direction: column; */
+   display: flex; 
+    flex-direction: column; 
 }
 
 .header{
@@ -39,8 +39,8 @@ body{
 main{
 /* min-height: 70vh; */ /* 60vh */　
 /* max-height: 100vh; */ /* 80vh */　
-/*  max-width: 1000px; */　
-/*  max-height: 800px;  */
+  max-width: 1000px; 
+  max-height: 800px; 
 
 	/* height: 800px; */
 	/* width: 1000px; */	
