--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,13 +6,15 @@ body{
     display: grid;
     margin: 10px 0 10px 0;
     min-height: 100vh;
-    grid-template-rows: 70px 60px 350px 1fr 1fr 70px;
-    grid-template-columns 850px 1fr;
+    grid-template-rows: 70px 60px 300px 100px 100px 70px;
+    grid-template-columns 700px 400fr;
     grid-template-areas:
-        "title  title  title "
-        "nav    main   ad    "
-        "nav    main   side  "
-        "footer footer footer";
+        "header header"
+	"nav     nav  "    
+        "main    itemA"
+        "main    itemB"
+        "main    itemC"   
+        "footer footer";
 }
 
 .header{
