--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body{
     gap: 15px;
     min-height: 100vh;
     grid-template-rows: 100px 60px 150px 150px 100px 100px 170px;
-    grid-template-columns 700px 400fr;
+    grid-template-columns 700px 400px;
     grid-template-areas:
         "header header"
 	"nav    nav   "    
