--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,8 +4,8 @@
 }
 body{
     display: grid;
-    margin: 10px 0 10px 0;
-    gap: 15px;
+    margin: 0; /* margin: 10px 0 10px 0; */
+    /* gap: 15px; */
     min-height: 100vh;
     grid-template-rows: 100px 60px 150px 150px 100px 100px 170px;
     grid-template-columns 700px 400px;
@@ -20,7 +20,7 @@ body{
 }
 
 body > * {
-    margin: 10px;
+    margin: 3px;
     padding: 10px;
 }
 
