--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,9 +4,10 @@
 }
 body{
     display: grid;
-    margin: 0; /* margin: 10px 0 10px 0; */
-    /* gap: 15px; */
-    min-height: 100vh;
+    margin: 10px 0 10px 0; /* margin: 10px 0 10px 0; */
+    /* min-height: 100vh; */
+	max-width: 1000px;
+	max-height: 800px;
     grid-template-rows: 100px 60px 150px 150px 100px 100px 170px;
     grid-template-columns 700px 400px;
     grid-template-areas:
