--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,10 +6,10 @@ body{
     display: grid;
     margin: 10px 0 10px 0; /* margin: 10px 0 10px 0; */
     /* min-height: 100vh; */
-	max-width: 1100px;
-	max-height: 830px;
+	/* max-width: 1100px; */
+	/* max-height: 830px; */
     grid-template-rows: 100px 60px 150px 150px 100px 100px 170px;
-    grid-template-columns 700px 400px;
+    grid-template-columns 700px 1fr;
     grid-template-areas:
         "header header"
 	"nav    nav   "    
