--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body{
     /* min-height: 100vh; */
 	/* max-width: 1100px; */
 	/* max-height: 830px; */
-    grid-template-rows: 100px 60px 150px 150px 100px 100px 170px;
+    grid-template-rows: 100px 60px 150px 150px 100px 100px 100px;
     grid-template-columns 700px 1fr;
     grid-template-areas:
         "header header"
@@ -76,7 +76,7 @@ background-color: #eee;
 }
 
 .footer{
-    height: 170px; /* 165px 70px 140px */
+    height: 100px; /* 170px 165px 70px 140px */
     text-align: center;
     grid-area: footer;
     background-color: #eee;
