--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,12 +4,12 @@
 }
 body{
     display: grid;
-    margin: 10px 0 10px 0; /* margin: 10px 0 10px 0; */
+    margin: 0; /* margin: 10px 0 10px 0; */
     /* min-height: 100vh; */
 	/* max-width: 1100px; */
 	/* max-height: 830px; */
     grid-template-rows: 100px 60px 150px 150px 100px 100px 100px;
-    grid-template-columns 700px 1fr;
+    grid-template-columns 2fr 1fr;
     grid-template-areas:
         "header header"
 	"nav    nav   "    
@@ -21,7 +21,7 @@ body{
 }
 
 body > * {
-    margin: 3px;
+    margin: 10px;
     padding: 10px;
 }
 
