--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,18 +6,19 @@ body{
     display: grid;
     margin: 0; /* margin: 10px 0 10px 0; */
     /* min-height: 100vh; */
-	width: 100%;
+	width: 100%; /* これがないと右に画面広げた時に余白ができる */
 	/* max-width: 1100px; */
 	/* max-height: 830px; */
-    grid-template-rows: 100px 60px 150px 150px 100px 100px 100px;
+    grid-template-rows: 100px 60px 300px 100px 100px 100px;
     grid-template-columns 700px 400px;
     grid-template-areas:
         "header header header header header header header header header header header"
 	"nav    nav    nav    nav    nav    nav    nav    nav    nav    nav    nav   "    
         "main   main   main   main   main   main   main   itemA  itemA  itemA  itemA "
         "main   main   main   main   main   main   main   itemA  itemA  itemA  itemA "
-        "main   main   main   main   main   main   main   itemB  itemB  itemB  itemB "
-        "main   main   main   main   main   main   main   itemC  itemC  itemC  itemC "   
+        "main   main   main   main   main   main   main   itemA  itemA  itemA  itemA "
+        "main   main   main   main   main   main   main   itemB  itemB  itemB  itemB " 
+        "main   main   main   main   main   main   main   itemC  itemC  itemC  itemC "  
         "footer footer footer footer footer footer footer footer footer footer footer";
 }
 
