--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ body{
 	/* max-width: 1100px; */
 	/* max-height: 830px; */
     grid-template-rows: 100px 60px 100px 100px 100px 100px 100px;
-    grid-template-columns 350px 350px 400px;
+    grid-template-columns: 350px 350px 400px;
     grid-template-areas:
 	 "header header header"
          "nav    nav    nav   "
