--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,14 +10,13 @@ body{
 	/* max-width: 1100px; */
 	/* max-height: 830px; */
     grid-template-rows: 100px 60px 100px 100px 100px 100px 100px;
-    grid-template-columns: 350px 350px 400px;
+    grid-template-columns: 700px 400px;
     grid-template-areas:
 	 "header header header"
          "nav    nav    nav   "
 	 "main   main   itemA "
-         "main   main   itemA "
          "main   main   itemB "
-	 "main   main   itemC "
+         "main   main   itemC "
 	 "footer footer footer"; 
 }
 
