--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,8 +9,8 @@ body{
 	width: 100%; /* これがないと右に画面広げた時に余白ができる */
 	/* max-width: 1100px; */
 	/* max-height: 830px; */
-    grid-template-rows: 100px 60px 100px 100px 100px 100px 100px;
-    grid-template-columns: 700px 400px;
+    grid-template-rows: 100px 60px repeat(3, 200px) 100px;
+    grid-template-columns: repeat(2, 350px) 400px;
     grid-template-areas:
 	 "header header header"
          "nav    nav    nav   "
