--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,8 +7,8 @@ body{
     margin: 0; /* margin: 10px 0 10px 0; */
     /* min-height: 100vh; */
 	width: 100%; /* これがないと右に画面広げた時に余白ができる */
-	/* max-width: 1100px; */
-	/* max-height: 830px; */
+	 max-width: 1100px; 
+	 max-height: 860px; 
     grid-template-rows: 100px 60px 300px repeat(2, 150px) 100px;
     grid-template-columns: repeat(2, 350px) 400px;
     grid-template-areas:
@@ -21,12 +21,12 @@ body{
 }
 
 body > * {
-    margin: 10px;
+    margin: 20px; /* 10px */
     padding: 10px;
 }
 
 .header{
-    height: 100px;  /* 70px */
+    /* height: 100px;   70px */
     text-align: center;
     grid-area: header;
     background-color: #eee;
@@ -40,7 +40,7 @@ body > * {
 }
 
 .nav{
-    height: 60px; /* 70px */
+   /*  height: 60px; 70px */
     background-color: #888;
     margin: 10px 0 10px 0; /* margin: 15px 0 10px 0;  margin: 10px 0 10px 0; */
     color: #fff;
@@ -76,7 +76,7 @@ background-color: #eee;
 }
 
 .footer{
-    height: 100px; /* 170px 165px 70px 140px */
+  /*  height: 100px; 170px 165px 70px 140px */
     text-align: center;
     grid-area: footer;
     background-color: #eee;
