--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,10 +5,11 @@
 body{
     display: grid;
     margin: 0; /* margin: 10px 0 10px 0; */
-    /* min-height: 100vh; */
-	width: 100%; /* これがないと右に画面広げた時に余白ができる */
-	 max-width: 1100px; 
-	 max-height: 860px; 
+    padding:0;
+    width: 100%; /* これがないと右に画面広げた時に余白ができる */
+    min-height: 100vh;
+	/* max-width: 1100px; */
+	/* max-height: 860px; */
     grid-template-rows: 100px 60px 300px repeat(2, 150px) 100px;
     grid-template-columns: repeat(2, 350px) 400px;
     grid-template-areas:
