--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,10 +64,19 @@ main{
 }
 .localNavigation{
     display: grid;  /* */
+  /*  grid-template-rows: repeat(4, 150px); */
+  /*  grid-template-columns: repeat(3, 200px) repeat(2, 200px); */
+  /*  grid-template-areas: */
+/*	 "main   main   main   itemA  itemA " */
+/*	 "main   main   main   itemA  itemA " */
+ /*        "main   main   main   itemB  itemB " */
+  /*       "main   main   main   itemC  itemC " */
+	
+	
     text-align: center;
     background-color: #888;
     color: #fff;
-    width: 550px; /* 550px */ 
+   /* width: 550px;  550px */ 
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
