--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body{
 
 .header{
     height: 100px;  /* 70px */
-    font-size: 25px;
+    font-size: 30px;  /* 25px */
     text-align: center;
     background-color: #eee;
     margin: 10px 0 10px 0; /* */
@@ -65,8 +65,8 @@ main{
 }
 .localNavigation{
     display: grid;  /* */
-  /*  grid-template-rows: repeat(4, 150px); */
-  /*  grid-template-columns: repeat(3, 200px) repeat(2, 200px); */
+  grid-template-rows: 300px repeat(2, 150px); */
+  /* grid-template-columns: repeat(3, 200px) repeat(2, 200px); */
   /*  grid-template-areas: */
 /*	 "main   main   main   itemA  itemA " */
 /*	 "main   main   main   itemA  itemA " */
