--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,7 +65,7 @@ main{
 }
 .localNavigation{
     display: grid;  /* */
-  grid-template-rows: 300px repeat(2, 150px); */
+  grid-template-rows: 2fr 1fr 1fr;
   /* grid-template-columns: repeat(3, 200px) repeat(2, 200px); */
   /*  grid-template-areas: */
 /*	 "main   main   main   itemA  itemA " */
