--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,6 +66,7 @@ main{
 .localNavigation{
     display: grid;  /* */
   grid-template-rows: 2fr 1fr 1fr;
+    grid-row-gap: 5px;
   /* grid-template-columns: repeat(3, 200px) repeat(2, 200px); */
   /*  grid-template-areas: */
 /*	 "main   main   main   itemA  itemA " */
