--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,17 +64,11 @@ main{
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
 .localNavigation{
+    .item{	
     display: grid;  /* */
   grid-template-rows: 2fr 1fr 1fr;
-    grid-row-gap: 5px;
-  /* grid-template-columns: repeat(3, 200px) repeat(2, 200px); */
-  /*  grid-template-areas: */
-/*	 "main   main   main   itemA  itemA " */
-/*	 "main   main   main   itemA  itemA " */
- /*        "main   main   main   itemB  itemB " */
-  /*       "main   main   main   itemC  itemC " */
-	
-	
+    grid-row-gap: 5px;	
+	}
     text-align: center;
     background-color: #888;
     color: #fff;
