--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,18 +31,15 @@ body{
 }
 
 main{
-    display: flex;
+    display: grid;
 	
-/* min-height: 70vh; /* 60vh */　*/　
-/* max-height: 100vh; /* 80vh */　*/　
 	max-width: 1000px;
-	max-height: 800px;  /*　*/
+	max-height: 800px;
 
     margin: 10px 0 10px 0;
 
 }
 .content{
-    /* flex: 1; */
     background-color: #eee;
     text-align: center;
     margin-right: 10px;
@@ -53,15 +50,7 @@ main{
 	
    width: 60%;  /* */	
    padding-top: 40%;  /* */
-		
-	/* width: 850px; */
-	/* height: 500px; */
-	/* max-height: 100%; */
-	/* max-width: 100%; */
-	/* min-height: 100%; */
-	/* min-width: 100%; */
-	
-    /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
+
 }
 .localNavigation{
     .item{	
@@ -80,15 +69,10 @@ main{
 	
 	 width: 40%;  /* */	
          padding-top: 40%;  /* */
-		   
-	/* width: 550px; */
-	/* height: 500px; */
-	/* max-height: 100%; */
-	/* max-width: 100%; */
-	/* min-height: 100%; */
-	/* min-width: 100%; */
-	
 }
+
+
+
 .footer{
     height: 165px; /* 70px 140px */
     text-align: center;
