--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,16 +31,22 @@ body{
 }
 
 main{
-    display: grid;
-	
 	max-width: 1000px;
 	max-height: 800px;
-
+	
+    display: grid;
+    grid-template-rows: 2fr 1fr 1fr;
+    grid-template-columns: 4fr 2fr;
+	
     margin: 10px 0 10px 0;
 
 }
-.content{
+
+.itemA {
+    grid-row: 1 / 4;
+    grid-column: 1 / 4;
     background-color: #eee;
+	
     text-align: center;
     margin-right: 10px;
     margin-left: 30px;             /* */
@@ -52,26 +58,49 @@ main{
    padding-top: 40%;  /* */
 
 }
-.localNavigation{
-    .item{	
-    display: grid;  /* */
-  grid-template-rows: 2fr 1fr 1fr;
-    grid-row-gap: 5px;	
-	}
-    text-align: center;
+
+.itemB{
+    grid-row: 1 / 2;
+    grid-column: 5 / 6;
     background-color: #888;
+    text-align: center;
     color: #fff;
    /* width: 550px;  550px */ 
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
-    margin-bottom: 20px;             /* */
-   /* height: auto;  */ /* height: auto;があると横幅に余白ができてしまう */
+    margin-bottom: 10px;             /* */
 	
 	 width: 40%;  /* */	
          padding-top: 40%;  /* */
 }
-
-
+.itemC{
+    grid-row: 2 / 3;
+    grid-column: 5 / 6;
+    background-color: #888;
+    text-align: center;
+    color: #fff;
+   /* width: 550px;  550px */ 
+    margin-right: 30px;           /* */
+    margin-top: 10px;             /* */
+    margin-bottom: 10px;             /* */
+	
+	 width: 40%;  /* */	
+         padding-top: 40%;  /* */
+}
+.itemD{
+    grid-row: 3 / 4;
+    grid-column: 5 / 6;
+    background-color: #888;
+    text-align: center;
+    color: #fff;
+   /* width: 550px;  550px */ 
+    margin-right: 30px;           /* */
+    margin-top: 10px;             /* */
+    margin-bottom: 20px;             /* */
+	
+	 width: 40%;  /* */	
+         padding-top: 40%;  /* */
+}
 
 .footer{
     height: 165px; /* 70px 140px */
