--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,6 @@ body{
     text-align: center;
     background-color: #eee;
     margin: 10px 0 5px 0;
-    margin-right: 0; /* */
 }
 
 .nav{
@@ -41,6 +40,9 @@ main{
 /*　width: 100%;　*/ 
 /*　box-sizing: border-box;  */ 
 
+  max-hight: 800px;
+  max-width: 1000px;
+
   /* 追加.. 余白 */
 /* margin: 2px auto; */
 grid-gap: 10px;
@@ -50,25 +52,25 @@ grid-gap: 10px;
  grid-row: span 3; /* top pictureマス, 3行占有 */
  background-color: #eee;
  text-align: center;
- margin-left: 10px; /* 10px 2px 5px */
+ margin-left: 10px; /* */
 }
 
 .itemB{
 background-color: #eee; /* #888 check */
  text-align: center;
-margin-right: 10px; /* 15px 30pxだと右の余白が空きすぎる */
+margin-right: 15px; /* 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
 }
 .itemC{
 background-color: #888;
 text-align: center;
-margin-right: 10px;
+margin-right: 15px;
 	/* right: 10px; */
 }
 .itemD{
 background-color: #888;
 text-align: center;
-margin-right: 10px;
+margin-right: 15px;
 	/* right: 10px; */
 }
 
@@ -79,5 +81,4 @@ margin-right: 10px;
     background-color: #eee;
     margin: 10px 0 10px 0;
     margin-bottom: 0; /* なぜかこれがないとmainの右余白がなくなる??, header,footerの右端も空きができる */
-    margin-right: 0; /* */
 }
