--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,7 +61,7 @@ grid-gap: 10px;
 }
 
 .itemB{
-background-color: #888; /* #888 check */
+background-color: #eee; /* #888 check */
  text-align: center;
 margin-right: 15px; /* 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
