--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
 }
 
 .wrap {
-     overflow: hidden;
+     overflow: hidden; /* bodyの外側をwarpで囲んで、これをつけると右スクロールバーが出なくなって画面にちゃんと収まる */
  }
 
 body{
@@ -61,21 +61,21 @@ grid-gap: 10px;
 }
 
 .itemB{
-background-color: #eee; /* #888 check */
+background-color: #888; /* #888 check */
  text-align: center;
-margin-right: 15px; /* 30pxだと右の余白が空きすぎる */
+margin-right: 10px; /* 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
 }
 .itemC{
 background-color: #888;
 text-align: center;
-margin-right: 15px;
+margin-right: 10px;
 	/* right: 10px; */
 }
 .itemD{
 background-color: #888;
 text-align: center;
-margin-right: 15px;
+margin-right: 10px;
 	/* right: 10px; */
 }
 
