--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,7 +41,7 @@ body{
 main{
   display: grid; /* main領域をgridレイアウトにする */
   grid-template-rows: 25vw 6.25vw 6.25vw; /* 3行 */
-	grid-template-columns: 62.5vw 36.5vw; /* 2列 35.5 */
+	grid-template-columns: 62.5vw 35.5vw; /* 2列 36.5vw */
 /*　width: 100%;　*/ 
 /*　box-sizing: border-box;  */ 
 
