--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ main{
   max-width: 1000px;
 
   /* 追加.. 余白 */
-/* margin: 2px auto; */
+ margin: 2px auto; /* ??? */
 grid-gap: 10px;
 }
 
@@ -61,7 +61,7 @@ grid-gap: 10px;
 }
 
 .itemB{
-background-color: #eee; /* #888 check */
+background-color: #888; /* #888 check */
  text-align: center;
 margin-right: 10px; /* 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
