--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,8 +20,7 @@ body{
     font-size: 30px;  /* 25px */
     text-align: center;
     background-color: #eee;
-    margin: 10px 0 5px 0;
-    margin-top: 0; /* ??? */
+    margin: 0px 0 5px 0;
 }
 
 .nav{
@@ -62,7 +61,7 @@ grid-gap: 10px;
 }
 
 .itemB{
-background-color: #eee; /* #888 check */
+background-color: #888; /* #888 check */
  text-align: center;
 margin-right: 10px; /* 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
