--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,7 +45,7 @@ main{
 /*　width: 100%;　*/ 
 /*　box-sizing: border-box;  */ 
 
-  max-hight: 800px;
+  max-hight: 900px; /* 800px */
   max-width: 1000px;
 
   /* 追加.. 余白 */
@@ -61,7 +61,7 @@ grid-gap: 10px;
 }
 
 .itemB{
-background-color: #888; /* #888 check */
+background-color: #eee; /* #888 check */
  text-align: center;
 margin-right: 10px; /* 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
