--- a/stylesheet.css
+++ b/stylesheet.css
@@ -75,7 +75,7 @@ main{
     padding: 10px; /* 20px */
      grid-row: 1 / 2;  /* 1 / 3; */
      grid-column: 2 / 3; /* 1.5 / 2; */
-    background-color: #888;
+    background-color: #eee;
     text-align: center;
     color: #fff;
     row-gap: 10px;
