--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,24 +2,31 @@
 	float: none;
 	position: static;
 }
+
+/* .wrap { */
+    /* overflow: hidden;  bodyの外側をwarpで囲んで、これをつけると右スクロールバーが出なくなって画面にちゃんと収まる */
+ /* } */
+
 body{
     display: flex;
     flex-direction: column;
-    margin: 0; /* */
-}
+    margin: 0; /* default 8px? */
+    /* margin-right: 0; */
+ }
 
 .header{
     height: 100px;  /* 70px */
+    /*　width: 100%;　*/ 
     font-size: 30px;  /* 25px */
     text-align: center;
     background-color: #eee;
-    margin: 10px 0 10px 0; /* */
+    margin: 10px 0 5px 0;
 }
 
 .nav{
    height: 70px;
     background-color: #888;
-    margin: 10px 0 10px 0; /* margin: 15px 0 10px 0;  margin: 10px 0 10px 0; */
+    margin: 5px 0 10px 0; /* margin: 15px 0 10px 0;  margin: 10px 0 10px 0; */
     color: #fff;
 	list-style-type: none; /* リスト先頭の黒丸を非表示 */
 	text-align: center; /* .header-list ul {}内ではなくこちらに書いたら中央揃えが適用された。(liの親box?) */
@@ -32,92 +39,51 @@ body{
 }
 
 main{
-	 max-width: 1000px;
-	 max-height: 600px; /* 800px */
+  display: grid; /* main領域をgridレイアウトにする */
+  grid-template-rows: 25vw 6.25vw 6.25vw; /* 3行 */
+	grid-template-columns: 62.5vw 35.5vw; /* 2列 36.5vw */
+/*　width: 100%;　*/ 
+/*　box-sizing: border-box;  */ 
 
-    	width: 100vw; /* */
-	 height: 100%;  /* 100vh? x 80vh; (縮小時にheaderがmain領域に乗る) */
-	　margin: 2px auto; /* margin:30px auto; */
-	grid-gap: 10px; /* 20px */
-	
-    display: grid;
-    grid-template-rows: calc(40vw - 5px) calc(20vw - 5px) calc(20vw - 5px); /* calc(40vw - 5px) calc(10vw - 5px) calc(10vw - 5px); */  
-    grid-template-columns: calc(60vw - 5px) calc(40vw - 5px); /* calc(60vw - 5px) calc(40vw - 20px); */
-	
-    /* grid-template-rows: 3fr 1fr 1fr; */ /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
-   /*  grid-template-columns: 1.5fr 1fr; */ /* 1fr 1fr; */
-	
-    margin: 10px 0 20px 0; /* [上][右][下][左] */
+  max-hight: 800px;
+  max-width: 1000px;
 
+  /* 追加.. 余白 */
+/* margin: 2px auto; */
+grid-gap: 10px;
 }
 
 .itemA {
-	
-    padding: 10px; /* 20px */
-    grid-row: 1 / 4;  /* 1 / 5; */
-    grid-column: 1 / 2; /* 1 / 1.5; */
-    background-color: #eee;
-    
-    text-align: center;
-    margin-right: 10px; 
-    margin-left: 30px;            /* */
-    margin-top: 20px;             /* */
-    margin-bottom: 20px;             /* */
-/*  width: 850px;  850px */  /* 元々なし */
-	
- /*  width: 60%;   */	
-/*   padding-top: 40%;   */
-
+ grid-row: span 3; /* top pictureマス, 3行占有 */
+ background-color: #eee;
+ text-align: center;
+ margin-left: 10px; /* */
 }
 
 .itemB{
-	
-    padding: 10px; /* 20px */
-     grid-row: 1 / 2;  /* 1 / 3; */
-     grid-column: 2 / 3; /* 1.5 / 2; */
-    background-color: #eee;
-    text-align: center;
-    color: #fff;
-    row-gap: 10px;
-   /* width: 550px;  550px */  /* 元々なし */
-    margin-right: 30px;           /* */
-    margin-top: 20px;             /* */
-    margin-bottom: 10px;             /* */
-	
-	/*  width: 40%;  */	
-       /*   padding-top: 40%;  */
+background-color: #eee; /* #888 check */
+ text-align: center;
+margin-right: 10px; /* 30pxだと右の余白が空きすぎる */
+	/* right: 10px; */
 }
 .itemC{
-	
-    padding: 10px; /* 20px */
-    grid-row: 2 / 3;  /* 3 / 4; */
-    grid-column: 2 / 3; /* 1.5 / 2; */
-    background-color: #888;
-    text-align: center;
-    color: #fff;
-    row-gap: 8px; /* 10px */
-    margin-right: 30px;          /* */
-    margin-top: 10px;            /* */
-     margin-bottom: 10px;             /* */
+background-color: #888;
+text-align: center;
+margin-right: 10px;
+	/* right: 10px; */
 }
 .itemD{
-	
-    padding: 10px; /* 20px */	
-    grid-row: 3 / 4;  /* 4 / 5; */
-    grid-column: 2 / 3; /* 1.5 / 2; */
-    background-color: #888;
-    text-align: center;
-    color: #fff;
-    row-gap: 10px; 
-    margin-right: 30px;          /* */
-  margin-top: 10px;            /* */
-  margin-bottom: 20px;             /* */
+background-color: #888;
+text-align: center;
+margin-right: 10px;
+	/* right: 10px; */
 }
 
 .footer{
-    height: 165px; /* 165px (70px) 140px */
+    height: 300px; /* 220px 200px 165px (70px) 140px */
+    /*　width: 100%;　*/ 
     text-align: center;
     background-color: #eee;
-    margin: 10px 0 10px 0; /* */
-
+    margin: 10px 0 10px 0;
+    margin-bottom: 0; /* なぜかこれがないとmainの右余白がなくなる??, header,footerの右端も空きができる */
 }
