--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body{
     flex-direction: column;
     margin: 0; /* default 8px? */
     /* margin-right: 0; */
-    overflow-x: hidden; /* bodyの外側をwarpで囲んで、これをつけると右スクロールバーが出なくなって画面にちゃんと収まる */
+    overflow-x: hidden;
     overflow-y: scroll;
  }
 
