--- a/stylesheet_c02_how_to_fun.css
+++ b/stylesheet_c02_how_to_fun.css
@@ -36,7 +36,7 @@ body{
         padding: 35px 40px 20px 20px; 余白: [上][右][下][左] /*  padding: 35px 40px  padding: 35px 40px 20px 20px; */
 }
 
-.header-list a {
+.title a {
   color: white; /* リンクの色を指定 */
   text-decoration: none; /* リンクの下線を非表示 */
 }
