--- a/stylesheet_c03_fun_page.css
+++ b/stylesheet_c03_fun_page.css
@@ -36,13 +36,15 @@ body{
         padding: 35px 40px 20px 20px; 余白: [上][右][下][左] /*  padding: 35px 40px  padding: 35px 40px 20px 20px; */
 }
 
-a{
+.header-list li a {
   color: white; /* リンクの色を指定 */
   text-decoration: none; /* リンクの下線を非表示 */
 }
 
-p.title { color: black; }
-
+p a {	 
+ color: black;
+ text-decoration: none; 	 
+}  
 
 main{
 
